src/test/deca/syntax/invalid/declVar-invalidName.lex
declVar-invalidName.deca:11:
